--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,23 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<div class="container">
+<h3>Nouvel utilisateur</h3>
+
+        <%= form_for @user, url: {action: "create"} do |u| %>
+        <div class="form-group">
+            <%= u.label "Prénom :" %><br>
+            <%= u.text_field :firstname %><br>
+        </div>
+        <div class="form-group">
+            <%= u.label "Nom :" %><br>
+            <%= u.text_field :lastname %><br>
+        </div>
+        <div class="form-group">
+            <%= u.label "Email :" %><br>
+            <%= u.text_field :email %><br>
+        </div>
+        <div class="form-group">
+            <%= u.submit "Créer un compte", class: "btn btn-primary" %>
+        </div>
+
+        <% end %>
+
+</div>
