--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,9 @@
     <li class="nav-item">
       <%= link_to "Liste des membres", users_path, class: "nav-link navbar-brand btn-sm btn-success" %>
     </li>
+    <li class="nav-item">
+      <%= link_to "Mon profil", profile_path(current_user), class: "nav-link navbar-brand btn-sm btn-info" %>
+    </li>
     <div class="btn-group">
       <li type="button" class="navbar-brand btn-sm btn-warning text-white dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Mon compte
