Add tests for users profile and edit pages, 2.4.1 OK

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,5 +4,6 @@
   <div class="container border border-primary">
     <p><%= u.firstname.capitalize %> <%= u.lastname.capitalize %></p>
     <p>Email : <%= u.email %></p>
+    <%= link_to "Voir le profil", profile_path(u), class: "btn btn-info" %>
   </div>
 <% end %>
