--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,3 +3,7 @@
 <div class="container border border-primary">
     <p>Email : <%= @user.email %></p>
 </div>
+
+<% if current_user == @user %>
+ <%= link_to "Modifier le profil", edit_user_path(@user), class: "btn btn-primary" %>
+<% end %>
