--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,11 @@
 <h1>Liste des membres</h1>
 
+<div class="row justify-content-center">
 <% User.all.each do |u| %>
-  <div class="container border border-primary">
+  <div class="col-lg-6 border border-primary">
     <p><%= u.firstname.capitalize %> <%= u.lastname.capitalize %></p>
     <p>Email : <%= u.email %></p>
     <%= link_to "Voir le profil", profile_path(u), class: "btn btn-info" %>
   </div>
 <% end %>
+</div>
